--- a/dna-nft-platform/tsconfig.json
+++ b/dna-nft-platform/tsconfig.json
@@ -17,5 +17,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
-  }
+  },
+  "exclude": [
+    "smart-contracts",
+    "smart-contracts/**/*",
+    "**/node_modules",
+    "**/.*"
+  ]
 }
